# pymc-typed-distributions

./: README.md  mise.toml  pyproject.toml
src/pymc_typed_distributions/: __init__.py  continuous.py  core.py  discrete.py  mixture.py  multivariate.py  types.py
tests/: test_continuous.py  test_discrete.py  test_mixture.py
