[project]
name = "pymc-typed-distributions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymc>=5.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.23.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
